--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "slim/psr7": "^1.3.0",
     "monolog/monolog": "^3.0",
     "twig/twig": "^3.0",
-    "slim/twig-view": "^3.0"
+    "slim/twig-view": "^3.0",
+    "aws/aws-sdk-php": "2.*"
+
   },
   "require-dev": {
     "heroku/heroku-buildpack-php": "*"
